feat: switching one method of tours to grpc

--- a/src/Explorer.API/Properties/launchSettings.json
+++ b/src/Explorer.API/Properties/launchSettings.json
@@ -4,8 +4,9 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:51713",
-      "sslPort": 44333
+      //"applicationUrl": "http://localhost:51713",
+      //"sslPort": 44333
+      "applicationUrl" : "http://localhost:44333"
     }
   },
   "profiles": {
