feat: switching tour methods to grpc

--- a/src/Explorer.API/Explorer.API.csproj
+++ b/src/Explorer.API/Explorer.API.csproj
@@ -50,6 +50,8 @@
 
 	<ItemGroup>
 		<Protobuf Include="Protos\tour.proto" />
+		<Protobuf Include="Protos\authoring.proto" />
+		<Protobuf Include="Protos\keyPoint.proto" />
 	</ItemGroup>
 
 	
