added protofiles for stakeholders

--- a/src/Explorer.API/Explorer.API.csproj
+++ b/src/Explorer.API/Explorer.API.csproj
@@ -50,6 +50,7 @@
 
 	<ItemGroup>
 		<Protobuf Include="Protos\tour.proto" />
+		<Protobuf Include="Protos\authentication.proto" />
 	</ItemGroup>
 
 	
