feat: switching encounters to grpc

--- a/src/Explorer.API/Explorer.API.csproj
+++ b/src/Explorer.API/Explorer.API.csproj
@@ -54,6 +54,7 @@
 		<Protobuf Include="Protos\keyPoint.proto" />
 		<Protobuf Include="Protos\follower.proto" />
 		<Protobuf Include="Protos\authentication.proto" />
+		<Protobuf Include="Protos\encounters.proto" />
 	</ItemGroup>
 
 	
